--- a/config/enki.yml
+++ b/config/enki.yml
@@ -4,9 +4,9 @@ title: Quidnunc Beta
 url:   http://quidnuncre.com
 author:
   name:    Quidnunc Team        # For copyright notice and ATOM feeds
-  email:   patrick.kennedy@quidnuncre.com # Exception emails will go here, and it is used in ATOM feeds
+  email:   bigredtriangle@gmail.com # Exception emails will go here, and it is used in ATOM feeds
   open_id:                  # These are used to login to the admin area
-      - http://google.com/accounts/o8/site-xrds?hd=quidnuncre.com
+      - http://thiscouldbeourlastchance.blogspot.com/
       # - http://secondaryopenid.com
 
 # Delete the following section if your site will not be acting as an OpenID delegate (http://wiki.openid.net/Delegation)
